--- a/esphome-config/athom_4ch_relay_heaters.yml
+++ b/esphome-config/athom_4ch_relay_heaters.yml
@@ -74,7 +74,9 @@ wifi:
   password: !secret wifi_password
 
   # Enable fallback hotspot in case wifi connection fails
-  ap: {} # This spawns an AP with the device name and mac address with no password.
+  ap:
+    ssid: "Fallback Hotspot"
+    password: "fallback_password"
 
 api:
   encryption:
